# multi-tactile-6d-estimation

./: README.md  requirements.txt
dockerfile/: Dockerfile  run.sh
json/: contacts.json  meshes.json  objects.json
models/002_master_chef_can/: 002_master_chef_can_vhacd.mtl  master_chef_can_2022-07-04-16-55-53.urdf  model.config  model.sdf
models/004_sugar_box/: model.config  model.sdf
models/006_mustard_bottle/: model.config  model.sdf  mustard_2022-07-04-16-31-17.urdf
models/007_tuna_fish_can/: model.config  model.sdf  tuna_fish_can_2022-07-12-13-32-25.urdf
models/008_pudding_box/: model.config  model.sdf  pudding_box_2022-07-12-13-32-44.urdf
models/011_banana/: banana_2022-07-05-17-08-05.urdf  model.config  model.sdf
models/019_pitcher_base/: model.config  model.sdf  pitcher_base_2022-07-12-13-31-53.urdf
models/021_bleach_cleanser/: bleach_cleanser_2022-07-12-13-34-59.urdf  model.config  model.sdf
models/036_wood_block/: model.config  model.sdf
models/040_large_marker/: large_marker_2022-07-12-13-35-32.urdf  model.config  model.sdf
optimization/: create_config_files.py  evaluate_poses.py  final_results.py  optimization.py  optimization_git.py  run.sh  save_poses.py  tactile_based_selector.py
physX/: CMakeLists.txt
physX/src/: main.cpp  main_test.cpp
phys_example/: CMakeLists.txt
phys_example/src/: FrameworkFoundation.h  main.cpp  wavefront.h
point_clouds/002_master_chef_can/: 2000.off  angles_database.txt  poses_images.txt  poses_sensors.txt
point_clouds/004_sugar_box/: 2000.txt  angles_database.txt  poses_images.txt  poses_sensors.txt
point_clouds/006_mustard_bottle/: 2000.off  angles_database.txt  poses_images.txt  poses_sensors.txt
point_clouds/007_tuna_fish_can/: 2000.txt  angles_database.txt  poses_images.txt  poses_sensors.txt
point_clouds/008_pudding_box/: 2000.txt  angles_database.txt  poses_images.txt  poses_sensors.txt
point_clouds/011_banana/: 2000.txt  angles_database.txt  poses_images.txt  poses_sensors.txt
point_clouds/019_pitcher_base/: 2000.txt  angles_database.txt  poses_images.txt  poses_sensors.txt
point_clouds/021_bleach_cleanser/: 2000.off  angles_database.txt  (+2 more)
train/: README.md  config.ini  dataset.py  decoder.py  encoder.py  main.py
(+307 files in other folders)
